fix(card): remove useless overflow:auto property

--- a/packages/react-components/src/components/card/card.module.css
+++ b/packages/react-components/src/components/card/card.module.css
@@ -95,7 +95,6 @@
     flex-grow: 1;
     height: 100%;
     width: 100%;
-    overflow: auto;
   }
 
   .Right {
